# Deus

./: .clang-format  .configuration.json  .gitignore  .gitmodules  .swift-format  .swift-version  CMakeLists.txt  Deus.swift  README.md  configure  deconfigure  example.sh  pyproject.toml  requirements.txt  setup.sh
Deus/: DeusApp.swift
Deus.xcodeproj/: project.pbxproj
Geometry/: 2D.swift  BezierCurve.swift  Geometry.swift
GeometryCoreTests/: 2DTests.swift  BezierCurveTests.swift
GeometryTests/: 2DTests.swift  BezierCurveTests.swift
LaboratoryKit/: LaboratoryKit.swift
ObservationKit/: Entity+QuarkLike.swift  NSColor+SingleColorLike.swift  ObservationKit.swift  ObservationView.swift
ObservationKitTests/: Entity+QuarkLikeTests.swift  NSColor+SingleColorLikeTests.swift
QuantumMechanics/: AnyParticle.swift  Complex+RealType.swift  Constants.swift  Dimension+Elementary.swift  Discrete.swift  Measurement+Differentiable.swift  Measurement+Differentiable.swift.gyb  Measurement+Dimension.swift  Measurement+Light.swift  Measurement+Zero.swift  Measurement.swift  MeasurementTypes.py  Opposable.swift  Particle.swift  Spin.swift  Symmetry.swift  UnitElectricCharge+Elementary.swift  UnitMass+Electronvolt.swift  __init__.py  measurement_types.py
QuantumMechanicsCore/: AnyParticle.swift  Spin.swift  Symmetry.swift
QuantumMechanicsCoreTests/: Anti+ParticleTests.swift  Complex+RealTypeTests.swift  DiscretionTests.swift  DiscretionTests.swift.gyb  MeasurementTests.swift  MeasurementTests.swift.gyb  ParticleTests.swift  SymmetryTests.swift
RelativityCore/: Clock.swift  (+1 more)
(+194 files in other folders)
