# ===--------------------------------------------------------------------------------------------===
# Copyright © 2025 Supernova. All rights reserved.
#
# This file is part of the Deus open-source project.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with this program. If not,
# see https://www.gnu.org/licenses.
# ===--------------------------------------------------------------------------------------------===

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools==80.9.0']

[project]
authors = [{ name = 'Supernova' }]
description = 'A simulator of the Big Bang.'
name = 'deus'
version = '1.0.0'

[tool.setuptools.packages.find]
exclude = [
  'Deus',
  'dist',
  'Geometry',
  'GeometryTests',
  'ObservationKit',
  'ObservationKitTests',
  'QuantumMechanicsTests',
  'RelativityKit',
  'RelativityKitTests',
  'swift-sh'
]
